package core

import java.util.UUID
import java.time.LocalDateTime

/**
 * Represents the type of message exchanged within an X-Road-like infrastructure.
 * A message can either be a Request or a Response.
 */
enum MessageType:
  case Request, Response

/**
 * Represents a message exchanged within an X-Road-like infrastructure.
 * An XRoadMessage is used to facilitate communication between different
 * components or entities of the system, such as clients and servers.
 *
 * @param id          A unique identifier for the message, generated by default if not provided.
 * @param messageType The type of the message (e.g., Request or Response).
 * @param sender      The sender of the message, typically the client or server initiating the exchange.
 * @param recipient   The recipient of the message, typically the target client or server.
 * @param service     The service being requested or responded to as part of the message exchange.
 * @param payload     A key-value map representing the message's data or parameters.
 * @param timestamp   The timestamp when the message was created, set to the current time by default.
 */
case class XRoadMessage(
  id: String = UUID.randomUUID().toString,
  messageType: MessageType,
  sender: String,
  recipient: String,
  service: String,
  payload: String, // JSON payload
  timestamp: LocalDateTime = LocalDateTime.now()
) {
  /**
   * Creates a response message based on the given response payload. The response message
   * switches the sender and recipient of the original message and retains the same service
   * information while including the provided payload in the response.
   *
   * @param responsePayload A map containing the key-value pairs representing the payload
   *                        of the response message.
   * @return An instance of `XRoadMessage` representing the generated response message 
   *         with the updated sender, recipient, and specified payload.
   */
  def createResponse(responsePayload: String): XRoadMessage = {
    XRoadMessage(
      messageType = MessageType.Response,
      sender = this.recipient,
      recipient = this.sender, // Reply to sender
      service = this.service,
      payload = responsePayload,
      id = this.id // Keep same ID for correlation
    )
  }
}
